# TradingSystem

./: CMakeLists.txt  README.md  main.cpp  main.py  run.sh  sharedMemoryStructureNoComments.md
archive/: install_packages.sh  requirements.txt  test  test.cpp
archive/src_old_ib_connection/backend/: main_trading_system_backend.py
archive/src_old_ib_connection/backend/ib_connection/: ib_api.py  ib_connection.py
config/: global_config.yaml
src/backend/: MainTradingSystemBackend.cpp  MainTradingSystemBackend.h
src/config_manager/: ConfigManager.cpp  ConfigManager.h  config_manager.py
